# sqlite3

./: compile.sh  run.sh  sqlite3_example.c
Qt6_Basics/QtQuickApp/: CMakeLists.txt  compile.sh  cross_compile.sh  main.cpp  run.sh
Qt6_Basics/QtQuickApp/qml/: Main.qml
cutecom/: CMakeLists.txt  ConfigManager.cpp  ConfigManager.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  compile.sh  main.cpp  readme.txt  run.sh
cutecom/build_arm/: CMakeCache.txt  Makefile  cmake_install.cmake  cutecom-serial
cutecom/build_arm/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
cutecom/build_arm/cutecom-serial_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
cutecom_v1/: CMakeLists.txt  ConfigManager.cpp  ConfigManager.h  LogViewer.cpp  LogViewer.h  LogViewer.ui  Logger.cpp  Logger.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  compile.sh  cross_compile.sh  main.cpp  readme.txt  run.sh  serial_log.db
cutecom_v1/build_arm/: CMakeCache.txt  Makefile  cmake_install.cmake  cutecom-serial
cutecom_v1/build_arm/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
cutecom_v1/build_arm/cutecom-serial_autogen/: deps  moc_predefs.h
kiosk/: CMakeLists.txt  CMakeLists.txt1  README.md  barcodes.db  build_imx93frdm.sh  build_okmx.sh  build_x86.sh  compile.sh  cross_compile.sh  kiosk.db  kiosk.db-shm  kiosk.db-wal  patients.db
kiosk/build_arm/: CMakeCache.txt  Makefile  cmake_install.cmake
kiosk/build_arm/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
kiosk/build_arm/kiosk_autogen/: deps  moc_predefs.h
kiosk/build_imx93frdm/: CMakeCache.txt  Makefile  cmake_install.cmake
kiosk/build_imx93frdm/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
kiosk/build_imx93frdm/kiosk_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
kiosk/build_okmx/: CMakeCache.txt  Makefile  cmake_install.cmake
kiosk/build_okmx/.qt/: QtDeploySupport.cmake
kiosk/build_okmx/kiosk_autogen/: moc_predefs.h  mocs_compilation.cpp
kiosk/build_x86/: CMakeCache.txt  Makefile  cmake_install.cmake  kiosk
kiosk/build_x86/.qt/: QtDeploySupport.cmake
kiosk/build_x86/kiosk_autogen/: moc_predefs.h  mocs_compilation.cpp
kiosk/doc/ProtocolParsor/: get_nibp  get_nibp.cpp  get_nibp_raw.cpp  get_spo2.cpp  get_weight  spo2PulseProtocolParser.c  test_nibp  test_nibp.cpp  test_protocolparser  test_protocolparser.cpp
kiosk/doc/network_printing_okmx93/: clean.pwg  ipp_print_1  ipp_print_1.cpp  ipp_print_2  kiosk.db  out.pwg  readme.md  valid.pwg
kiosk/doc/printing service/: README.md
kiosk/doc/printing-service/: CUPS Bring-Up on i.MX93 (Manual Relocation, No Yocto Rebuild).odt  README.md  printerTestOnOKMX9352C.odt
kiosk/doc/protocolParser/: readme.md
kiosk/doc/pwg_writer_for_imx93frdm/: build_aarch64.sh  pwg_writer
kiosk/doc/working_nwprinter_test_ubuntu1804/: README.md  ipp_print_2  ipp_print_2.cpp  pwg_writer_1  pwg_writer_1.cpp  working.pwg
kiosk/src/: main.cpp  main.cpp2
kiosk/src/controller/: barcodescanner.cpp  barcodescanner.h  cameracontroller.cpp  cameracontroller.h  homecontroller.cpp  homecontroller.h  inputcontroller.cpp  inputcontroller.h  navigationmanager.cpp  navigationmanager.h  printcontroller.cpp  printcontroller.h  printercontroller.cpp  printercontroller.h  protocolcontroller.cpp  protocolcontroller.h  protocolparser.cpp  protocolparser.h  settingscontroller.cpp  settingscontroller.h  visiontestcontroller.cpp  visiontestcontroller.h
kiosk/src/model/: barcodemodel.cpp  barcodemodel.h  visionresult.h  vitalsmodel.cpp  vitalsmodel.h
kiosk/src/network/: restclient.cpp  restclient.h
kiosk/src/service/: adminauthservice.h  healthmetricsservice.cpp  healthmetricsservice.h  inputservice.cpp  inputservice.h  printerservice.cpp  printerservice.h  protocol.h  sessionservice.cpp  sessionservice.h  settingsauthservice.cpp  settingsservice.cpp  settingsservice.h  syncservice.cpp  syncservice.h  systemsettingsservice.cpp  systemsettingsservice.h  visionservice.cpp  visionservice.h  vitalsservice.cpp  vitalsservice.h
kiosk/src/storage/: databasemanager.cpp  patientrepository.h  printerrepository.cpp  record.h  sessionrepository.h  settingsrepository.cpp  settingsrepository.h  sqliterecorder.cpp  sqliterecorder.h  vitalsrepository.cpp  vitalsrepository.h
kiosk/src/view/: baseview.cpp  homeview.cpp  homeview.cpp.bkp  homeview.h  mainwindow.cpp  mainwindow.h  metriccard.cpp  metriccard.h  printview.cpp  printview.h  recordsview.cpp  recordsview.h  (+4 more)
kiosk/src_1/: main.cpp
qt6_encoder_test/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  build.sh  cross_compile.sh  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  rotaryhandler.cpp  rotaryhandler.h
qt6_encoder_test/build_arm/: CMakeCache.txt  Makefile  RotaryTestApp  cmake_install.cmake  rotary_qt
vitalTracker/: CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  vitalcontroller.cpp  vitalcontroller.h  vitalmodel.cpp  vitalmodel.h  waveformview.cpp  waveformview.h
vitalTracker/build_arm/: CMakeCache.txt  Makefile  VitalTracker  cmake_install.cmake
vitalTracker/build_x86/: CMakeCache.txt  Makefile  VitalTracker  cmake_install.cmake
vitalTracker/controller/: VitalController.cpp  VitalController.h
vitalTracker/model/: VitalData.h  VitalModel.cpp  VitalModel.h
vitalTracker/view/: MainWindow.cpp  MainWindow.cpp_1  MainWindow.h  MainWindow.h_1  WaveformWidget.cpp  WaveformWidget.cpp_2  WaveformWidget.h
wavegen_v1/: CMakeLists.txt  compile_arm64.sh  compile_x86.sh  cross_compile.sh  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  readme.txt  run_arm64.sh  run_x86.sh  waveformwidget.cpp  waveformwidget.h
wavegen_v1/build_arm/: CMakeCache.txt  Makefile  WaveformGenerator  cmake_install.cmake
wavegen_v1/build_x86/: CMakeCache.txt  Makefile  WaveformGenerator  cmake_install.cmake
wavegen_v2/: CMakeLists.txt  compile.sh  cross_compile.sh  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  readme.txt  run.sh  waveformdb.cpp  waveformdb.h  waveforms.db  waveformwidget.cpp  waveformwidget.h
wavegen_v2/build_arm/: CMakeCache.txt  Makefile  WaveformGenerator  cmake_install.cmake
(+862 files in other folders)
